--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,9 @@ img {
         width: calc(100% / 2);
     }
  }
+
+ @media screen and (min-width: 768px) and (max-width:1160px) {
+    .container {
+        width: 100%;
+    }
+ }
